@@ -30,3 +30,9 @@ say("This should be <%= color('underlined', UNDERLINE) %>!")
 
 # Using constants only.
 say("This might even <%= BLINK %>blink<%= CLEAR %>!")
+
+# It even works with list wrapping.
+erb_digits = %w{Zero One Two Three Four}      +
+             ["<%= color('Five', :blue) %%>"] +
+             %w{Six Seven Eight Nine}
+say("<%= list(#{erb_digits.inspect}, :columns_down, 3) %>")
